--- a/src/main/webapp/admin/tiendas/edit.xhtml
+++ b/src/main/webapp/admin/tiendas/edit.xhtml
@@ -23,6 +23,10 @@
                             <p:inputText id="name" value="#{tiendaController.selected.nombre}" title="name" required="true" requiredMessage="requerido"/>
                             <h:outputLabel value="Direccion" for="direccion" />
                             <p:inputText id="direccion" value="#{tiendaController.selected.direccion}" title="direccion" required="true" requiredMessage="requerido"/>
+                            <h:outputLabel value="Descripcion" for="descripcion" />
+                            <p:inputText id="descripcion" value="#{tiendaController.selected.descripcion}" title="descripcion" required="true" requiredMessage="requerido"/>
+                            <h:outputLabel value="Coordenadas" for="coordenadas" />
+                            <p:inputText id="coordenadas" value="#{tiendaController.selected.coordenadas}" title="coordenadas" required="true" requiredMessage="requerido"/>
                             <h:outputLabel value="Categoria" for="categoria" />
                             <p:selectOneMenu id="categoria" value="#{propiedadEditView.tipo}" >
                                 <f:selectItem itemLabel="Select One" itemValue=""/>
